# highpy

./: .gitignore  LICENSE  README.md  bench_final.txt  bench_recursive_results.txt  benchmark_output.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
benchmarks/: bench_large_scale.py  bench_recursive.py  benchmark_runner.py  benchmark_suite.py  report_generator.py
highpy/: __init__.py
highpy/analysis/: __init__.py  cpython_bottlenecks.py  type_profiler.py
highpy/compiler/: __init__.py  ast_optimizer.py  bytecode_rewriter.py  native_codegen.py
highpy/optimization/: __init__.py  function_specializer.py  lazy_evaluator.py  loop_optimizer.py  memory_pool.py  parallel_executor.py  type_specializer.py
highpy/recursive/: __init__.py  convergence_prover.py  fixed_point_engine.py  fractal_analyzer.py  fractal_optimizer.py  meta_circular.py  purity_analyzer.py
highpy/runtime/: __init__.py  adaptive_runtime.py  deoptimizer.py  inline_cache.py
highpy/utils/: __init__.py  helpers.py
legacy/: README.md  setup.py
manuscript/: SUBMISSION_CHECKLIST.md  biography.txt  compile.bat  cover_letter.txt  credit_author_statement.txt  declaration_ai_use.txt  declaration_competing_interests.txt  generate_docx.py  highlights.txt  manuscript_jss.docx  manuscript_jss.tex  manuscript_jss_v2.docx  references.bib  title_page.txt
reports/: bench_large_scale_results.txt  bench_result2.txt  benchmark_results_20260221_004505.json  performance_report.md  rfoe_q1_report.py  tables.tex  test_result.txt
tests/: test_analysis.py  test_compiler.py  test_function_specializer.py  test_integration.py  test_lazy_parallel.py  test_loop_optimizer.py  test_memory_pool.py  test_purity_largescale.py  test_recursive.py  test_runtime.py  test_type_profiler.py  test_type_specializer.py
