[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "highpy"
version = "1.0.0"
description = "Adaptive Multi-Level Specialization Framework for Python Performance Optimization with Recursive Fractal Optimization Engine (RFOE)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Farid Dihan Nahdi", email = "fariddihannahdi@mail.ugm.ac.id"},
]
keywords = [
    "python",
    "optimization",
    "compiler",
    "AST",
    "fractal",
    "Banach contraction",
    "memoization",
    "fixed-point",
    "convergence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "cffi>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "psutil>=5.9",
]
docs = [
    "python-docx>=1.0",
]

[project.urls]
Homepage = "https://github.com/faridnahdi/highpy"
Repository = "https://github.com/faridnahdi/highpy"
Issues = "https://github.com/faridnahdi/highpy/issues"

[tool.setuptools.packages.find]
include = ["highpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
